--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.5",
     "next": "12.3.1",
+    "next-auth": "^4.14.0",
+    "nodemailer": "^6.8.0",
+    "pg": "^8.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.18",
+    "prisma": "^4.4.0",
+    "tailwindcss": "^3.1.8"
   }
 }
