--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
+    "javascript-time-ago": "^2.5.7",
     "next": "12.3.1",
     "next-auth": "^4.14.0",
     "nodemailer": "^6.8.0",
