--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "start": "next start",
     "lint": "next lint"
   },
+
+  "engines": {
+    "node": "16.x",
+    "npm": ">=6.0.0."
+  },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "javascript-time-ago": "^2.5.7",
