--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start",
     "lint": "next lint"
   },
-
   "engines": {
     "node": "18.x",
     "npm": ">=8.0.0."
@@ -31,6 +30,7 @@
     "eslint-plugin-react": "^7.32.2",
     "postcss": "^8.4.18",
     "prisma": "^4.4.0",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "vercel": "^28.15.3"
   }
 }
